# Techquadra-Test

./: .gitignore  pyproject.toml
StudentManagementProj/: db.sqlite3  makefile  manage.py
StudentManagementProj/StudentManagementProj/: asgi.py  settings.py  urls.py  wsgi.py
StudentManagementProj/studentRegistration/: admin.py  forms.py  models.py  urls.py  validations.py  views.py
StudentManagementProj/studentRegistration/templates/: admin_panel.html  dashboard.html  index.html  login.html  reports.html  st_form.html
