[tool.poetry]
name = "techquadra test"
version = "0.1.0"
description = "\"Machine Test\""
authors = ["ashwinPy <ashwinam31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
